--- a/SiteEventos/cadastro.html
+++ b/SiteEventos/cadastro.html
@@ -64,8 +64,7 @@
       <main>
         <div class="py-5 text-center">
           <img class="d-block mx-auto mb-4" src="img/mão.jpg" alt="" width="175" height="250">
-          <p class="lead">Cadastre-se no melhor site de admiração de passáros
-          </p>
+          <p class="lead">Cadastre-se no melhor site de admiração de passáros</p>
         </div>
         <form class="needs-validation" novalidate="">
           <div class="row g-3">
