--- a/SiteEventos/cadastro.html
+++ b/SiteEventos/cadastro.html
@@ -16,7 +16,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Navbar</a>
+        <a class="navbar-brand" href="index.html">Index</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -29,22 +29,7 @@
             <li class="nav-item">
               <a class="nav-link" href="login.html">Login</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="cards.html">cards</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="carrosel.html">carrosel</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Contato.html">Contato</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="cadastro.html">cadastro
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
+
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -56,6 +41,9 @@
     </nav>
   </header>
 
+    <!-- ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+
+
   <!-- ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
 
   <div class="fundo" id="fundo">
@@ -64,9 +52,10 @@
       <main>
         <div class="py-5 text-center">
           <img class="d-block mx-auto mb-4" src="img/mão.jpg" alt="" width="175" height="250">
-          <p class="lead">Cadastre-se no melhor site de admiração de passáros</p>
+          <p class="lead">Cadastre-se no melhor site de admiração de passáros
+          </p>
         </div>
-        <form class="needs-validation" novalidate="">
+        <form class="needs-validation" novalidate="" onsubmit="false">
           <div class="row g-3">
             <div class="col-sm-6">
               <label for="firstName" class="form-label">Nome</label>
@@ -87,7 +76,7 @@
 
             <div class="col-12">
               <label for="email" class="form-label">Email <span class="text-body-secondary"></span></label>
-              <input type="email" class="form-control" id="email" placeholder="exemplo@email.com.br">
+              <input type="email" class="form-control" id="email1" placeholder="exemplo@email.com.br">
               <div class="invalid-feedback">
                 Please enter a valid email Senha for shipping updates.
               </div>
@@ -96,7 +85,7 @@
 
             <div class="col-12">
               <label for="email" class="form-label">Repita o Email <span class="text-body-secondary"></span></label>
-              <input type="email" class="form-control" id="email" placeholder="exemplo@email.com.br">
+              <input type="email" class="form-control" id="email2" placeholder="exemplo@email.com.br">
               <div class="invalid-feedback">
                 Please enter a valid email address for shipping updates.
               </div>
@@ -104,7 +93,7 @@
 
             <div class="col-12">
               <label for="address" class="form-label">Senha</label>
-              <input type="password" class="form-control" id="Senha" placeholder="" required="">
+              <input type="password" class="form-control" id="Senha1" placeholder="" required="">
               <div class="invalid-feedback">
                 Please enter your shipping Senha.
               </div>
@@ -112,12 +101,11 @@
 
             <div class="col-12">
               <label for="Senha2" class="form-label">Repita a Senha <span class="text-body-secondary"></span></label>
-              <input type="password" class="form-control" id="Senha2" placeholder="">
+              <input type="password" class="form-control" id="Senha2" placeholder="" onblur="logica()">
             </div>
 
 
-
-            <button class="w-100 btn btn-primary btn-lg" type="submit">Continue para o Login</button>
+            <button class="w-100 btn btn-primary btn-lg" type="submit" >Continue para o Login</button>
         </form>
     </div>
     </main>
@@ -159,6 +147,12 @@
   </footer>
 </div>
 </body>
+
+<script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  
+
 
 
 </html>
