--- a/SiteEventos/index.html
+++ b/SiteEventos/index.html
@@ -14,7 +14,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Navbar</a>
+        <a class="navbar-brand" href="index.html">Index</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -27,22 +27,6 @@
             <li class="nav-item">
               <a class="nav-link" href="login.html">Login</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="cards.html">cards</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="carrosel.html">carrosel</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Contato.html">Contato</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="cadastro.html">cadastro
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -50,7 +34,6 @@
           </form>
         </div>
       </div>
-
     </nav>
   </header>
 
@@ -268,5 +251,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
 
 </html>
