--- a/SiteEventos/cadastro.html
+++ b/SiteEventos/cadastro.html
@@ -93,7 +93,7 @@
 
             <div class="col-12">
               <label for="address" class="form-label">Senha</label>
-              <input type="password" class="form-control" id="Senha1" placeholder="" required="">
+              <input type="password" class="form-control" id="senha1" placeholder="" required="">
               <div class="invalid-feedback">
                 Please enter your shipping Senha.
               </div>
@@ -101,7 +101,7 @@
 
             <div class="col-12">
               <label for="Senha2" class="form-label">Repita a Senha <span class="text-body-secondary"></span></label>
-              <input type="password" class="form-control" id="Senha2" placeholder="" onblur="logica()">
+              <input type="password" class="form-control" id="senha2" placeholder="" onblur="logica()">
             </div>
 
 
