--- a/SiteEventos/index.html
+++ b/SiteEventos/index.html
@@ -138,9 +138,11 @@
             <div class="card-body">
               <p class="card-text">Passeie por um campo onde verá todos os passáros da abertura do jogo ANGRY BIRDS RIO
                 2.</p>
-              <div class="d-flex justify-content-between align-items-center">
+              <div class="d-flex justify-content-between align-items-center"  >
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Ver</button>
+                  <a href="AngryBirds.html">
+                  <button type="button" class="btn btn-sm btn-outline-secondary" >Ver</button>
+                </a>
                 </div>
                 <small class="text-body-secondary"></small>
               </div>
@@ -154,7 +156,7 @@
               <p class="card-text">Veja todas as corujas do filme A LENDA DOS GUARDIÕES ao vivo.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Ver</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary" >Ver</button>
                 </div>
                 <small class="text-body-secondary"></small>
               </div>
