--- a/Site de 27/Java.html
+++ b/Site de 27/Java.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="PHP.html">PHP</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Swift.html".html">Swift</a>
+                    <a class="nav-link" href="Swift.html">Swift</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="Python.html">Pythin</a>
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="Rails.html">Rails</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="C#.html".html">C#</a>
+                    <a class="nav-link" href="C#.html">C#</a>
                   </li>
                 </ul>
               </div>
