--- a/Site de 27/Index.html
+++ b/Site de 27/Index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -30,7 +31,7 @@
                             <a class="nav-link" href="PHP.html">PHP</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Swift.html" .html">Swift</a>
+                            <a class="nav-link" href="Swift.html">Swift</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="Python.html">Python</a>
@@ -39,7 +40,7 @@
                             <a class="nav-link" href="Rails.html">Rails</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="C#.html">C#</a>
+                            <a class="nav-link" href="Ce.html">C#</a>
                         </li>
                     </ul>
                 </div>
